--- a/app.css
+++ b/app.css
@@ -20,22 +20,30 @@ body {
     border: 0;
 }
 
-#banner .bannerimg {
-    max-height: 450px;
+.bannerimg {
+    height: 450px;
+    width: auto;
     border-radius: 0;
 }
 
 #banner #mainTitle {
     height: 80%;
+    font-size: 4em;
+}
+
+.typeWriter {
+    text-align: center;
+    font-size: 2em;
+    transform: translateY(-100px);
 }
 
 .projectBox {
     height: 375px;
     width: 800px;
     text-align: center;
-    margin: 35px 20px;
+    margin: 60px 20px;
     padding: 20px;
-    background-image: url(imgs/cardBackground.jpg);
+    background-color: #016074;
     background-repeat: none;
     background-position: center;
     background-size: cover;
@@ -69,12 +77,27 @@ body {
 
 @media(max-width: 650px) {
     .projectText {
-        font-size: 1.05em;
+        font-size: 1.00em;
     }
-    #mainTitle {
-        font-size: 2.5em
+    #banner #mainTitle {
+        font-size: 3em;
+    }
+    .projectBox {
+        height: 300px;
+    }
+    .bannerimg {
+        height: 350px;
+        width: auto;
+    }
+    .typeWriter {
+        font-size: 1.7em;
+        transform: translateY(-75px);
+    }
+    .projectBox {
+        margin: 35px 20px;
     }
 }
+
 
 
 
